# bold-ir-management

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.sh  deploy.sh  dfx.json  test.sh
.github/workflows/: contracts.yml  rust.yml
contracts/: ir_manager.sol  remappings.txt
contracts/script/: BatchManager.s.sol  OpenTroves.s.sol
contracts/src/: BatchManager.sol
contracts/src/Dependencies/: AggregatorV3Interface.sol  Constants.sol
contracts/src/Interfaces/: IActivePool.sol  IAddRemoveManagers.sol  IBoldRewardsReceiver.sol  IBoldToken.sol  IBorrowerOperations.sol  ICollSurplusPool.sol  ICollateralRegistry.sol  ICommunityIssuance.sol  IDefaultPool.sol  IInterestRouter.sol  ILQTYStaking.sol  ILQTYToken.sol  ILiquityBase.sol  ILockupContractFactory.sol  IPriceFeed.sol  ISortedTroves.sol  IStabilityPool.sol  IStabilityPoolEvents.sol  ITellorCaller.sol  ITroveEvents.sol  ITroveManager.sol  IWETH.sol  IWETHPriceFeed.sol
contracts/src/Types/: BatchId.sol  LatestBatchData.sol  LatestTroveData.sol  TroveChange.sol
contracts/src/test/: ERC20Faucet.sol
contracts/test/: BatchManager.t.sol
ir_manager/: Cargo.toml  README.md  candid.did
ir_manager/src/: api.rs  canister.rs  charger.rs  cleanup.rs  constants.rs  error.rs  evm_rpc.rs  gas.rs  halt.rs  journal.rs  lib.rs  main.rs  process.rs  providers.rs  signer.rs  state.rs  strategy.rs  timers.rs  types.rs  utils.rs
ir_manager/src/strategy/: data.rs  executable.rs  lock.rs  mod.rs  run.rs  settings.rs  stable.rs  stale.rs
ir_manager/src/utils/: common.rs  error.rs  evm_rpc.rs  exchange.rs  gas.rs  mod.rs  signer.rs  transaction_builder.rs
src/ir_manager_backend/: Cargo.toml
