[package]
name = "ir_manager"
version = "0.1.0"
edition = "2021"

[features]
default = []
export-api = []

[dependencies]
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", tag = "v0.15.x" }
ic-storage = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-storage", tag = "v0.15.x" }
ic-canister = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-canister", tag = "v0.15.x" }
candid = "0.10"
serde = "1.0.199"
serde_bytes = "0.11.12"
hex = "0.4.3"
serde_json = "1.0.117"
num-traits = "0.2"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "c3ccf7e", features = [
    "rpc-types",
    "consensus",
    "signers",
    "eips"
] }
alloy-sol-types = "0.7.7"
alloy-primitives = "0.7.7"
icrc-ledger-types = "0.1.5"
evm_rpc_types = "1.2.0"