[package]
name = "ir_manager"
version = "0.1.0"
edition = "2021"

[features]
default = []
export-api = []

[dependencies]
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.22.x" }
ic-storage = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-storage", tag = "v0.22.x" }
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", tag = "v0.22.x" }
candid = "0.10"
serde = "1.0.199"
serde_bytes = "0.11.12"
hex = "0.4.3"
serde_json = "1.0.117"
num-traits = "0.2"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "c3ccf7e", features = [
    "rpc-types",
    "consensus",
    "signers",
    "eips"
] }
alloy-sol-types = "0.7.7"
alloy-primitives = "0.7.7"
icrc-ledger-types = "0.1.5"
evm_rpc_types = "1.2.0"
ic-stable-structures = "0.6.6"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "oldtime", "std"] }
rand_chacha = "0.3.1"
rand = "0.8.5"
num-bigint = "0.4.6"